2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Update version to 2.0.8 as well
	  
	* RELEASE:
	* configure.ac:
	* debian/.cvsignore:
	* debian/README.Debian:
	* debian/changelog:
	* debian/control.in:
	* debian/dirs:
	* debian/docs:
	* debian/libgnet-dev.preinst:
	* debian/libgnet1.0.README.Debian:
	* debian/libgnet1.0.docs:
	* debian/libgnet1.0.postinst:
	* debian/libgnet1.1.README.Debian:
	* debian/libgnet1.1.docs:
	* debian/libgnet1.1.postinst:
	* debian/libgnet2.0-0.files:
	* debian/rules:
	* debian/rules.in:
	  Update debian build stuff (most taken directly from
	  Takuo Kitame's .diff for the real debian packages)

2005-04-25  Andreas Rottmann  <a.rottmann at gmx dot at>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* configure.ac:
	* doc/gnet-docs.sgml:
	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_list_async),
	(inetaddr_new_list_async_gthread),
	(inetaddr_new_list_async_gthread_dispatch),
	(gnet_inetaddr_new_list_async_cancel),
	(gnet_inetaddr_get_name_async),
	(gnet_inetaddr_get_name_async_cancel),
	(inetaddr_get_name_async_gthread_dispatch),
	(inetaddr_get_name_async_gthread):
	  Eliminate direct usage of pthreads on unix
	  systems and use GLib GThreads instead.

2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/base64_test.c: (main):
	* tests/conn_http_test.c: (main):
	* tests/inetaddr_test.c: (main):
	  Tests need to call gnet_init() before using any
	  gnet functions as well.

2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/conn-http.c: (gnet_conn_http_new),
	(gnet_conn_http_emit_event), (gnet_conn_http_done),
	(gnet_conn_http_conn_parse_response_headers),
	(gnet_conn_http_conn_recv_chunk_body),
	(gnet_conn_http_conn_recv_nonchunked_data),
	(gnet_conn_http_conn_cb), (gnet_conn_http_ia_cb),
	(gnet_conn_http_delete_internal), (gnet_conn_http_delete):
	  Make sure the http connection can be deleted from within