@@ -1,3 +1,8 @@
+2005-05-03  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/usagi_ifaddrs.c: (free_nlmsglist):
+	  Fix memory leaks
+
 2005-04-25  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
